...
    @IBOutlet weak var themeSelectorSegmentedControl: UISegmentedControl!
    @IBOutlet weak var mainTitleLabel: UILabel!
    weak var delegate: SideMenuViewControllerDelegate?
    private var defaultHighlightedCell: Int = 0

    private var sideMenuOptions: [SideMenuOptionModel] = [
        SideMenuOptionModel(image: UIImage(systemName: "house")!, title: "Home"),
        SideMenuOptionModel(image: UIImage(systemName: "map")!, title: "Map")
    ]
    var favorites: [FavoritesModel] = []

    override func viewDidLoad() {
        super.viewDidLoad()
        highlightSelectedRow()
...
