...
                            <constraint firstItem="YoU-4q-3OH" firstAttribute="leading" secondItem="29g-FL-Vzf" secondAttribute="leading" id="2hq-Mn-rh8"/>
                            <constraint firstItem="29g-FL-Vzf" firstAttribute="trailing" secondItem="YoU-4q-3OH" secondAttribute="trailing" id="7rT-AQ-bvm"/>
                            <constraint firstItem="29g-FL-Vzf" firstAttribute="bottom" secondItem="YoU-4q-3OH" secondAttribute="bottom" id="IuN-Wq-cRn"/>
                            <constraint firstItem="YoU-4q-3OH" firstAttribute="top" secondItem="29g-FL-Vzf" secondAttribute="top" id="Rh0-4t-Y8x"/>
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" title="Favorites Map" id="jTU-fS-KiM"/>
                    <connections>
                        <outlet property="mapView" destination="YoU-4q-3OH" id="60S-6h-era"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="iZU-7f-Ntq" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
            </objects>
...
                            <constraint firstItem="CpG-3B-YYm" firstAttribute="leading" relation="lessThanOrEqual" secondItem="6TV-CP-7a3" secondAttribute="leading" constant="24" id="afO-ft-V3F"/>
                            <constraint firstItem="CpG-3B-YYm" firstAttribute="top" secondItem="6TV-CP-7a3" secondAttribute="top" constant="12" id="jyc-mA-13B"/>
                            <constraint firstItem="7EW-0h-XdD" firstAttribute="width" secondItem="Mo5-6e-HMh" secondAttribute="width" id="liI-Hl-Dqx"/>
                            <constraint firstItem="6TV-CP-7a3" firstAttribute="trailing" secondItem="qEy-s8-fjj" secondAttribute="trailing" id="pux-cV-wQR"/>
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" title="Detailed view" id="4TC-Nb-bKs"/>
                    <connections>
                        <outlet property="cloudsAllLabel" destination="Hy1-Um-7Ta" id="RAM-xi-qf4"/>
                        <outlet property="dateTimeLabel" destination="CpG-3B-YYm" id="WVF-Nf-uel"/>
                        <outlet property="feelsLikeLabel" destination="gTB-uq-Jls" id="cf9-1V-QJM"/>
                        <outlet property="groundLevelLabel" destination="hp7-Q4-Kwb" id="qlG-b4-AiL"/>
                        <outlet property="humidityLabel" destination="eRT-VL-JgH" id="Ssz-Il-VXB"/>
...
