...
        static let tSideMenuFavoritesTableView = 51
        static let tWeatherVCMainImageView = 61
        static let tWeatherVCForecastImageView = 71
    }

    struct AccessibilityIdentifier {
        static let mainWeatherImageView = "mainWeatherImageView"
    }
}

