...
                as? ForecastTableviewCell else {
            fatalError("ForecastTableViewCell xib not registered")
        }
        if let uiTest = (UIApplication.shared.delegate as? AppDelegate)?.uiTest,
           uiTest == true,
            indexPath.row == 0 {
            cell.accessibilityIdentifier = "forecastCellID"
        }
        cell.fillUIWith(item)
        return cell
    }

    func tableView(_ tableView: UITableView, heightForRowAt indexPath: IndexPath) -> CGFloat {
...
